fix: on small screen dialog would be upper

--- a/style.css
+++ b/style.css
@@ -173,4 +173,8 @@ table {
   body {
     align-items: initial;
   }
+
+  #add-book-dialog {
+    top: 25%;
+  }
 }
